fix spacing and flex

--- a/src/Components/listView/ListView.css
+++ b/src/Components/listView/ListView.css
@@ -18,6 +18,7 @@
 
 .listview-inner-container .listview-col-1 {
   display: flex;
+  align-self: flex-start;
 }
 
 .listview-inner-container .image-wrapper {
@@ -121,6 +122,10 @@
 @media only screen and (max-width: 550px) {
   .listview-container > div {
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  }
+
+  .listview-inner-container .list-content {
+    min-height: 0;
   }
 }
 /* 
